[package]
name = "quote_macros"
version = "0.1.0" # don't forget to update html_root_url, version in readme for breaking changes
authors = ["Nika Layzell <nika@thelayzells.com>"]
license = "MIT/Apache-2.0"
description = "Helper crate for quasi-quoting macro quote!(...)"
repository = "https://github.com/dtolnay/quote"
documentation = "https://docs.rs/quote/"
keywords = ["syn"]
categories = ["development-tools::procedural-macro-helpers"]
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs"]

[lib]
proc-macro = true
